--- a/brumstaxi/res/layout/my_journey.xml
+++ b/brumstaxi/res/layout/my_journey.xml
@@ -1,47 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:background="@drawable/background"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:whatever="http://schemas.android.com/apk/res-auto"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:background="@drawable/bg"
+    android:weightSum="100"
     android:id="@+id/relativemain1" >
+    
+    
+    <ImageView 
+         android:layout_width="match_parent"
+        android:layout_weight="4"
+        android:layout_height="0dip"
+        android:layout_marginLeft="@dimen/bookTaxiMarginLeft"
+                android:layout_marginRight="@dimen/bookTaxiMarginLeft"
+                android:background="@android:color/white"/>
+    <ImageView
+        android:id="@+id/register_header"
+        android:layout_width="match_parent"
+        android:layout_weight="10"
+        android:layout_height="0dip"
+       android:background="@drawable/a8"
+        />
     <RelativeLayout 
-	    android:layout_width="fill_parent"
-	    android:layout_height="wrap_content"
+	    
 	    android:background="#FFFFFF"
-	    android:layout_marginLeft="20dp"
-	    android:layout_marginRight="20dp"
-	    android:id="@+id/relativemain" >
-	    <TextView
-	        android:layout_height="wrap_content"
-	        android:layout_width="wrap_content"
-	        android:layout_marginTop="@dimen/bookTaxiHeaderHeight"
-	        android:id="@+id/gapuse"
-	        android:orientation="horizontal"
-	        />
+	  
+	    android:id="@+id/relativemain" 
+	    
+	     android:layout_width="match_parent"
+              android:layout_height="0dip"
+              android:orientation="vertical"
+              android:layout_weight="84"
+              
+             
+              android:layout_marginLeft="@dimen/bookTaxiMarginLeft"
+              android:layout_marginRight="@dimen/bookTaxiMarginLeft"
+	    >
+     
          <ListView
             android:id="@+id/listview_journeyblock"
             android:layout_width="fill_parent"
-            android:layout_below="@+id/gapuse"
             android:layout_marginTop="@dimen/mjAboveHeaderGap"
-            android:layout_marginBottom="@dimen/bookTaxiHeaderHeight"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content" 
+            android:layout_above="@+id/homePageBtn"/>
          
-         <Button
-	        android:id="@+id/homePageBtn"
-	        android:layout_width="140dip"
-	        android:layout_height="@dimen/bookTaxiHeaderHeight"
-	        android:layout_alignParentBottom="true"
-	        android:layout_centerHorizontal="true"
-	        android:background="@drawable/home"
-	        android:layout_marginTop="@dimen/mjRelTopGap"
-	        android:layout_marginBottom="5dip" />
-    </RelativeLayout>
+         
+          <Button
+             
+        android:id="@+id/homePageBtn"
+        android:layout_width="fill_parent"
+        android:layout_height="@dimen/bookTaxiHeaderHeight"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/home_journy"
+        android:layout_marginTop="10dip"
+        android:layout_marginBottom="15dip"
+        android:layout_marginLeft="@dimen/bookTaxiMarginLeft"
+        android:layout_marginRight="@dimen/bookTaxiMarginLeft" />
+   </RelativeLayout>
 
-   <Button
-	    android:layout_width="fill_parent"
-	    android:layout_height="@dimen/bookTaxiHeaderHeight"
-	    android:background="@drawable/a8"
-	    android:layout_marginTop="@dimen/mjAboveHeaderGap"
-	    android:layout_alignParentTop="true"
-	    android:id="@+id/headrer_view" />
-</RelativeLayout>
+  
+   
+   
+</LinearLayout>
